# solver-test

./: CMakeLists.txt  main.cpp
lib/OndselSolver/include/: FullColumn.h
